# comp-neurosci

./: .dockerignore  .gitignore  .pandoc-template.tex  0-Kernel-Setup.ipynb  1 Spike-Sorting.ipynb  1 Time-Varying Data.ipynb  1-Time-Varying-Data.ipynb  10-Reduced-Dynamical-Models.ipynb  11-Network-Models.ipynb  11-Spiking-Neural-Networks.ipynb  2 Selectivity.ipynb  2 Time-Varying Data.ipynb  2-Data-and-Spike-Stats.ipynb  2-Linear-Point-Processes.ipynb  2-Optional-Probability.ipynb  2-Probability.ipynb  2-Time-Varying-Data.ipynb  3 Selectivity.ipynb  3-Data-and-IO.ipynb  3-Linear-Time-Invariant-Systems.ipynb  3-Probability.ipynb  3-Receptive-Fields.ipynb  4-Data-and-IO.ipynb  4-Data-and-Model-Fitting.ipynb  4-Data-and-Spike-Stats.ipynb  4-Decoding-Models.ipynb  4-Receptive-Fields.ipynb  4-Spike-Train-Statistics.ipynb  5-Decoding-Models.ipynb  5-Linear-Time-Invariant-Systems.ipynb  5-Machine-Learning.ipynb  5-Neural-Networks.ipynb  5-Optional-Data-Structure.ipynb  5-Spike-Train-Statistics.ipynb  6-Decoding-Models.ipynb  6-Hebbian-Plasticity.ipynb  6-Linear-Time-Invariant-Systems.ipynb  6-Optional-Data-Structures.ipynb  6-Optional-Dynamical-Systems.ipynb  6-Receptive-Fields.ipynb  (+28 more)
.binder/: environment.yml  postBuild
assignments/: data-exploration-1.md  data-exploration-2.md  data-exploration-3.md  data-exploration-4.md  data-exploration-5.md  data-exploration-presentation.md  data-exploration.md  moby.txt  session-1A.ipynb  session-1B-solution.ipynb  session-1B.ipynb  session2a-linalg.ipynb  session2b-lti-solution.ipynb  session2b-lti.ipynb  session3-advancedlti.ipynb  st82_2_4_1_st468_song_7.toe_lis  toelis.py
comp_neurosci_uva/: __init__.py  data.py  graphics.py  pprox.py  signal.py
data/: filters.npz
data/io-examples/: cells.tbl  st11_1_2_1_A8.txt
data/operant/: 15_motvar_bos.sdrs_rDAT  15_motvar_probe.sdrs_rDAT  15_motvar_songs_1.2choice_eDAT  15_motvar_songs_1.2choice_rDAT  15_motvar_unfv.sdrs_rDAT  15_repsamediff.sdrs_rDAT  15_repsamediff_2m.sdrs_rDAT  15_repsamediff_3m.sdrs_rDAT  15_repsamediff_more.sdrs_rDAT  15_songseg1.2choice_eDAT  15_songseg1.2choice_rDAT  19_motvar_probe.sdrs_rDAT  19_motvar_songs_2.2choice_rDAT  414_motvar_probe.sdrs_rDAT  414_motvar_songs_1.2choice_rDAT  500_motvar_probe.sdrs_rDAT  500_motvar_songs_3.2choice_rDAT  6_motvar_probe.sdrs_rDAT  6_motvar_songs_1.2choice_eDAT  motvar_bos.stim  motvar_probe.stim  motvar_songs_1.stim  motvar_songs_2.stim  motvar_songs_3.stim  motvar_unfv.stim  repsamediff.stim  repsamediff_2m.stim  repsamediff_3m.stim  repsamediff_more.stim  songseg1.stim  st015_log.txt
data/raw/: README.md
data/spikes/: st11_1_2_1.json  st82_2_4_1_st15_song_2.toe_lis  st82_2_4_1_st15_song_5.toe_lis  st82_2_4_1_st15_song_8.toe_lis  st82_2_4_1_st468_song_1.toe_lis  st82_2_4_1_st468_song_6.toe_lis  st82_2_4_1_st494_song_1.toe_lis  (+9 more)
docs/: instructor_notes.org
resources/: dynamical-systems.md  journals.md  linear-algebra.md  outline.org  pair-programming.md  probability.md  rivanna_setup.md  syllabus.md  textbooks.md
scripts/: extract_recordings.py  fetch_data.sh  fetch_responses.py  filter_responses.py
syllabus/: syllabus.md
tools/: data.py  dists.py  graphics.py  pprox.py  signal.py
(+19 files in other folders)
