[bdist_wheel]
universal = 1

[pep8]
ignore=E221,E501,E701

[metadata]
name = comp-neurosci-uva
version = attr: comp_neurosci_uva.__version__
description = Notebooks and shared code for Computational Neuroscience course at UVA
long_description = file: README.md
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Natural Language :: English
author = Dan Meliza
author_email = dan@meliza.org
maintainer = Dan Meliza
maintainer_email = dan@meliza.org
url = https://github.com/melizalab/comp-neurosci

[options]
zip_safe = false
packages = comp_neurosci_uva
python_requires = >=3.6
setup_requires =
    setuptools
install_requires =
    numpy>=1.16
    scipy>=1.2
    pandas>=1.3.5
    ewave>=1.0.6
    toelis>=2.0.1
    quickspikes>=1.3.7
    matplotlib>=2.2.2
    ipywidgets>=7.4.2

[options.packages.find]
exclude = *test*
